kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/valid/SimpleOperationCall.kmt
/* $Id: SimpleOperationCall.kmt,v 1.1 2005-04-20 15:20:58 ffleurey Exp $ */

// Simple operation Call

package tctest;

class A {

	operation opa(a : A) : A is do end

}

class B inherits A {

	operation opb(b : B) : B is do end
 
}

class Test {

	operation test1() : Void is do
		A.new.opa(void)
	end
	
	operation test2() : Void is do
		A.new.opa(A.new)
	end
	
	operation test3() : Void is do
		A.new.opa(B.new)
	end
	
	operation test4() : Void is do
		var a : A init B.new
		a := a.opa(a).opa(a.opa(a))
	end
	
	operation test5() : Void is do
		var a : A init B.new
		a := a.opa(a).opa(a.opa(a))
	end
	
	operation test6() : Void is do
		B.new.opa(A.new)
	end

}

/* END OF FILE */