kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/003_associations_02.kmt
/* $Id: 003_associations_02.kmt,v 1.1 2005-11-18 15:50:21 dvojtise Exp $ */

// Test of a invalid associations

package root_package;


/* double composition*/
class A {
    attribute b : B#a
}
class B {
	attribute a : A#b
}
